// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.ithsdistans.se"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  iths distans
</a>
`;

exports[`changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.ithsdistans.se"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  iths distans
</a>
`;

exports[`changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.ithsdistans.se"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  iths distans
</a>
`;
